@@ -429,14 +429,14 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,62,26,50,14
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 219, 92
+IDD_SETTINGS DIALOGEX 0, 0, 219, 126
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Settings"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,107,71,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,162,71,50,14
+    DEFPUSHBUTTON   "OK",IDOK,107,105,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,162,105,50,14
     GROUPBOX        "File associations",IDC_STATIC,7,7,205,58
     LTEXT           "Press to associate WinDjView with .djvu and .djv files:",
                     IDC_STATIC,15,18,182,9
@@ -445,7 +445,11 @@ BEGIN
                     IDC_RESTORE_ASSOCS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,
                     15,49,188,10
     LTEXT           "WinDjView 0.3.1\nby Andrew Zhezherun",IDC_STATIC_ABOUT,
-                    7,71,92,18
+                    7,105,92,18
+    GROUPBOX        "Thumbnails",IDC_STATIC,7,69,205,29
+    CONTROL         "&Generate thumbnails for all pages in background",
+                    IDC_GEN_ALL_THUMBNAILS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,15,82,188,10
 END
 
 IDD_FIND DIALOGEX 0, 0, 287, 45
@@ -547,7 +551,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 212
         TOPMARGIN, 7
-        BOTTOMMARGIN, 85
+        BOTTOMMARGIN, 119
     END
 
     IDD_FIND, DIALOG
